# Modurust-vst-hexodsp

./: .gitattributes  .gitignore  Cargo.toml  FIXES_SUMMARY.md  LICENSE  README.md  WARP.md  automation_report.md  cargo_check_output.txt  ui_fixes.patch
automation_reports/: automation_report_20251105_165649.md  automation_report_20251105_170007.md  automation_report_20251105_174252.md  automation_report_20251105_184328.md  automation_report_20251105_194356.md  automation_report_20251105_204423.md  automation_report_20251105_214452.md  automation_report_20251105_224651.md  automation_report_20251105_235143.md
docs/: AUTOMATION_TASKFLOW.md  DEVELOPMENT_WORKFLOW.md  FOCUS_DESKTOP.md  FRONTEND_DOCUMENTATION.md  README.md  ROADMAP.md  architecture.md  changes-features-ACCURATE.md  changes-features.md  desktop-demo-plan.md  developer-setup.md  frontend-features.md  frontend-status.md  node-system-features.md  phase4-audio-engine-completion.md  project-analysis-next-steps.md  user-guide.md  web-app-plan.md
examples/: basic_daw_usage.rs  node_graph_demo.rs
ref project/modular fractal shader/: .gitignore  CHANGES.md  Cargo.toml  README.md  build_web.sh
ref project/modular fractal shader/assets/shaders/: liquid_metal.wgsl  mandelbrot.wgsl  psychedelic_swirl.wgsl
ref project/modular fractal shader/assets/shaders/isf/: dark fractal.fs  diatribes - mindphaser.fs  diatribes - neuronix mainframe.fs  diatribesgraffiti -  fractal tunnel.fs  jeyko - day 42 part 2.fs  jeyko - day 89.fs  kali - ancient temple.fs  kali - dizzy dreams.fs  kali - fragile.fs  kali - generators.fs  kali - spaceship.fs  kali - talismans.fs  orblivious - acid trip.fs  orblivious - lines of your magic.fs
ref project/modular fractal shader/assets/shaders/isf/effects/: Strobe.fs
ref project/modular fractal shader/assets/shaders/isf/generator/: 3d frac.fs  4d beats alpha control.fs  Ancient_Aztec_Visuals_clKSzz.fs  Ayahuasca_WfX3zn.fs  Aztec_Walls_tdjcWz.fs  Biopunk_Fractal_Mysticism_3ff3zn.fs  Butterfly_Blaze_mtKyD3.fs  Day_15_3lGGzR.fs  Day_31-Plojunb_haspl_tly3R3.fs  Day_48_WtcSW4.fs  DeepSeek_R1-Audio_Visual_lXVfW3.fs  Floral_Oblivion_dtlyDX.fs  Fork of 4th eye.fs  Fork_Fractal_Ce_sleeplessm_431_dlffzj.fs  Fork_Heartwing__sleeplessm_737_mlSSz3.fs  Fork_[phreax]_g_sleeplessm_729_l33BRX.fs  Fork_more_color_sleeplessm_999_dtXBRj.fs  Fractal_Nebula_Vortex_wflGRH.fs  Genuary_2025_day_10_X3yyWV.fs  Grayscale_fractal_wfs3z8.fs  Kabbalistic_fractal_circles_X33yRB.fs  Kali Genuary coding.fs  Neon psy.fs  Neon_Pulse_Kraken_lXXfRM.fs  Optical_Pulse_3cfGzn.fs  Psychedelic_Zoom_1_DsscWn.fs  Psychedelic_tube_sdcGRX.fs  Pulsating_Mandala_Waves_tclGRH.fs  Recursive_Sacred_Triangle_wclGRH.fs  Retrograde_waves_XXcyRB.fs  Ringing_Around_XX2XWh.fs  Rotating circles.fs  Slug_Ring_+_audio_mtyyW1.fs  Tryptamine_Visions_3cf3zn.fs  Untitled Shader (2).fs  Untitled Shader.fs  [phreax]_electric_sheep_wlV3zy.fs  [phreax]_hexflower_dtfGRH.fs  [phreax]_highway_to_hyperspace_msXXzs.fs  abstract volumetrics.fs  (+231 more)
ref project/modular fractal shader/docs/: DEVELOPMENT_ROADMAP.md  FEATURES_STATUS.md  FEATURE_DEVELOPMENT_ROADMAP.md  FRONTEND_DEVELOPMENT_GUIDE.md  PROJECT_GOALS.md  UI_UX_DESIGN_GUIDE.md
ref project/modular fractal shader/examples/: fractal_demo.rs  load_isf_shaders.rs  node_editor_demo.rs  web_demo.html
ref project/modular fractal shader/src/: audio.rs  benchmark.rs  gesture.rs  gui.rs  lib.rs  main.rs  main_standalone.rs  node_editor.rs  nodes.rs  osc.rs  shader_converter.rs  shader_renderer.rs  web.rs  web_interface.rs
ref project/modular fractal shader/src/animation/: easing.rs  keyframe.rs  mod.rs  timeline.rs
ref project/modular fractal shader/src/assets/: mod.rs
ref project/modular fractal shader/src/export/: animation.rs  formats.rs  image_sequence.rs  mesh.rs  mod.rs  video.rs  voxel.rs
ref project/modular fractal shader/src/fractal/: engine.rs  formulas.rs  mod.rs  renderer.rs  types.rs
ref project/modular fractal shader/src/fractal/shaders/: fractal_compute.wgsl  fractal_render.wgsl
ref project/modular fractal shader/src/nft/: mod.rs
ref project/modular fractal shader/src/output/: mod.rs
ref project/modular fractal shader/src/pbr/: mod.rs
ref project/modular fractal shader/src/procedural/: mod.rs
ref project/modular fractal shader/src/project/: mod.rs
ref project/modular fractal shader/src/rendering/: mod.rs
ref project/modular fractal shader/src/rendering/shaders/: fractal_compute.wgsl  fractal_render.wgsl
ref project/modular fractal shader/src/scene/: mod.rs  objects.rs
ref project/modular fractal shader/src/ui/: fractal_nodes.rs  fractal_ui.rs  main.rs  mod.rs  node_editor.rs  panels.rs  theme.rs  workspaces.rs
ref project/modular fractal shader/src/web/: mod.rs
ref project/modular fractal shader/web/: index.html
scripts/: README.md  build_release.sh  check_ui_and_compile.ps1  desktop_build.ps1  desktop_run.ps1  dev_workflow.ps1  issues.csv  project-items.csv  taskflow.ps1  taskflow_checked.ps1  taskflow_hourly.ps1
src/: ai_audio.rs  audio_backend.rs  audio_nodes.rs  clip_node_integration.rs  daw_core.rs  daw_nodes.rs  eframe_ui.rs  eframebackup_ui (2).rs  event_queue.rs  gesture_integration.rs  hid_osc_bindings.rs  lib.rs  main.rs  mcp_server.rs  midi2_mpe.rs  midi_control_system.rs  modular_patch_system.rs  node_graph.rs  node_instance_manager.rs  piano_roll_editor.rs  player_backend.rs  sai_audio.rs  stream_diffusion_audio.rs  theming_system.rs  transport_sync.rs  ui.rs  ui_backup.rs  vst3_host.rs  web_interface.rs
src/audio_engine/: bridge.rs  cpal_io.rs  dsp_core.rs  mod.rs  node_graph.rs  node_instance_manager.rs  transport.rs
src/presets/: cookbook_presets.rs  effect_presets.rs  filter_presets.rs  generator_presets.rs  mod.rs  utility_presets.rs
src/ui/: audio_engine_bridge.rs  bevy_egui_ui.rs  bevy_web_ui.rs  eframe_ui.rs  eframe_ui.rs.fixed  eframe_ui_full.rs  egui_ui_full.rs  hexagonal_node_view.rs  mod.rs  professional_daw_ui.rs  theme_manager.rs
tests/: integration_tests.rs
web/: index.html
web/css/: main.css  responsive.css
web/js/: accessibility.js  (+11 more)
