[package]
name = "hexodsp-daw"
version = "0.1.0"
edition = "2021"
description = "Revolutionary Rust-based Digital Audio Workstation with modular synthesis and three UI views"
authors = ["Compiling.org Developers Collective <vjuniodev@gmail.com>"]
license-file = "LICENSE"
repository = "https://github.com/compiling-org/Modurust-vst-hexodsp"
homepage = "https://github.com/compiling-org/Modurust-vst-hexodsp"
keywords = ["daw", "audio", "modular", "synthesis", "rust"]
categories = ["multimedia", "audio", "api-bindings"]

[dependencies]
# Core dependencies for DAW functionality
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full", "rt-multi-thread"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }

# Audio file handling
hound = "3.5"  # WAV/AIFF file handling

# Random number generation for noise generator
rand = "0.8"

# Logging
log = "0.4"
env_logger = "0.10"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Eframe UI framework for immediate mode GUI
eframe = "0.27"
egui = "0.27"

# Bevy game engine for 3D graphics and advanced rendering
# bevy = { version = "0.17", features = ["dynamic_linking"] }

# VST3 plugin hosting (commented out - not available on crates.io)
# vst3-sys = "0.2"
# vst3-host = "0.1"

# MIDI 2.0 and MPE
midir = "0.9"
wmidi = "4.0"

# Real-time audio processing
cpal = "0.15"

[features]
default = []
full_stack = []
daw_min = []