[package]
name = "hexodsp-daw"
version = "0.1.0"
edition = "2021"
description = "Revolutionary Rust-based Digital Audio Workstation with modular synthesis and three UI views"
authors = ["Compiling.org Developers Collective <vjuniodev@gmail.com>"]
license-file = "LICENSE"
repository = "https://github.com/compiling-org/Modurust-vst-hexodsp"
homepage = "https://github.com/compiling-org/Modurust-vst-hexodsp"
keywords = ["daw", "audio", "modular", "synthesis", "rust"]
categories = ["multimedia", "audio", "api-bindings"]

[dependencies]
# Core dependencies for DAW functionality
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full", "rt-multi-thread"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }

# Audio file handling
hound = "3.5"  # WAV/AIFF file handling

# Random number generation for noise generator
rand = "0.8"

# Logging
log = "0.4"
env_logger = "0.10"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Bevy 0.17 + bevy_egui (wgpu native)
# Disable dynamic_linking to avoid MSVC object limit (LNK1189) on Windows
# Remove Linux-specific windowing features on Windows
bevy = "0.17"
bevy_egui = "0.38.0"
 bevy_a11y = "0.17"
 egui = "0.33"
bevy_image = "0.17"
bevy_winit = "0.17"

# VST3 plugin hosting (temporarily disabled - not available on crates.io)
# vst3-sys = { git = "https://github.com/RustAudio/vst3-sys" }

# MIDI 2.0 and MPE
midir = "0.9"
wmidi = "4.0"

# Real-time audio processing
cpal = "0.15"

# Crossbeam for thread-safe communication in audio bridge
crossbeam = "0.8"
crossbeam-channel = "0.5"
crossbeam-utils = "0.8"

# Web server and WebSocket support
warp = { version = "0.3", optional = true }
tokio-tungstenite = { version = "0.20", optional = true }
futures-util = { version = "0.3", optional = true }
uuid = { version = "1.0", features = ["v4", "serde"] }

[features]
default = []
full_stack = []
daw_min = []
webui = [
    "warp",
    "tokio-tungstenite",
    "futures-util",
]
