[package]
name = "modular-fractal-shader"
version = "0.1.0"
edition = "2021"
description = "Professional fractal generator and 3D editor/animator with node-based interface"
authors = ["Fractal Generator Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/compiling-org/modular-fractal-shader"
homepage = "https://github.com/compiling-org/modular-fractal-shader"
keywords = ["fractal", "3d", "graphics", "wgpu", "gui", "animation", "export"]
categories = ["graphics", "multimedia", "mathematics", "gui"]

[[bin]]
name = "fractal-generator"
path = "src/main.rs"

[lib]
name = "fractal_generator_lib"
crate-type = ["cdylib", "rlib"]

[dependencies]
# GUI framework - using bevy_egui instead of eframe
# eframe = { version = "0.30.0", optional = true, features = ["wgpu"] }
egui = "0.32.3"
bevy = { version = "0.17.2", features = ["dynamic_linking"] }
bevy_egui = { version = "0.37.1", optional = true, features = ["default"] }

# Graphics and compute
wgpu = "26.0.1"
winit = "0.29.0"
bytemuck = { version = "1.15", features = ["derive"] }
futures = "0.3"

# Explicitly add a compatible version of termcolor to try to resolve the conflict
termcolor = "1.1.3"

# Math and utilities
nalgebra = { version = "0.32", features = ["serde-serialize"] }
uuid = { version = "1.0", features = ["v4"] }
rand = "0.8"
noise = "0.8"

# File I/O and serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ron = "0.8"
bincode = "1.3"

# Audio processing (optional)
cpal = { version = "0.15", optional = true }
rustfft = { version = "6.4", optional = true }

# Image processing
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "exr"] }

# Logging and utilities
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
thiserror = "1.0"
parking_lot = "0.12"
tokio = { version = "1.0", features = ["full"] }
pollster = "0.4.0"

# File dialogs
rfd = "0.15.4"

# Time handling
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2.5.0"

# CPU detection for benchmarking
num_cpus = "1.16"

# System information
whoami = "1.5"

[features]
default = ["gui"]
gui = ["dep:bevy_egui"]
audio = ["dep:cpal", "dep:rustfft"]
midi = ["audio"]

# Web deployment features
web = ["gui"]

# Performance benchmarking
benchmark = []

[profile.release]
opt-level = 3
debug = false
strip = true
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true